tests/type_errors/nested_lambda_type_error.nos
# expect_error: has no method length
# Test: type error in nested lambda calling wrong method

main() = {
    outer = x => {
        inner = y => y.length()  # y should be String for length()
        inner(x)  # But x is Int
    }
    outer(42)
}
